# answer

./: .clang-format  .gitignore  .shellcheckrc  .yamllint  README.md  functions  functions-Alpine  functions-Debian  functions-DragonFlyBSD  functions-FreeBSD  functions-NetBSD  functions-OpenBSD  functions-debian  functions-freebsd  functions-native  ksysroot.sh  meson.build
.github/actions/installcheck/: action.yaml
.github/actions/iterate/: action.yaml
.github/workflows/: build.yaml  multibuild.yaml  singlebuild.yaml
githooks/: pre-commit
test-c/: Makefile  answer.c  answer.h  hello.c  main.c  meson.build
test-cxx/: answer.cpp  main.cpp  meson.build
